force-app/main/default/objects/refedge__Reference_Interview__c/fields/refedge__Org_description__c.field-meta.xml
<CustomField>
    <fullName>refedge__Org_description__c</fullName>
    <label>Org description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>