force-app/main/default/objects/refedge__Reference_Interview__c/fields/refedge__Org_website__c.field-meta.xml
<CustomField>
    <fullName>refedge__Org_website__c</fullName>
    <label>Org website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>