force-app/main/default/objects/refedge__Reference_Interview__c/fields/refedge__Speaker_info__c.field-meta.xml
<CustomField>
    <fullName>refedge__Speaker_info__c</fullName>
    <label>Speaker info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>